# OBAgent

./: .env.example  .env.live.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html
scripts/: db_tunnel.sh  import_snapshot.sh  install_services.sh  prove_slice.py  uninstall_services.sh
src/studio_agent/: agent.py  analysis.py  config.py  db.py  index.py  llm.py  mcp_server.py  notion.py  repository.py  staffing.py  web.py
tests/: conftest.py  test_db.py  test_repository.py
