[project]
name = "studio-staffing-agent"
version = "0.1.0"
description = "Read-only AI agent over the studio's PMS project history (phase one)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # DB connector: pure-Python MySQL client, no build toolchain required.
    "pymysql>=1.1.0",
    # Config from environment variables.
    "pydantic-settings>=2.2.0",
    # Provider-agnostic LLM access via any OpenAI-compatible endpoint.
    # The OpenAI SDK is just the transport; the provider is set by base_url in config.
    "openai>=1.40.0",
    # Custom MCP server for the in-house PMS.
    "mcp>=1.2.0",
    # Minimal local web UI for testing in a browser (uvicorn ships with mcp).
    "fastapi>=0.110",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
# Convenience entry points.
studio-mcp = "studio_agent.mcp_server:main"
studio-agent = "studio_agent.agent:main"
studio-web = "studio_agent.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/studio_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
